xl2roefact/tests/_test_results.txt
Traceback (most recent call last):
  File "/usr/lib/python3.10/runpy.py", line 187, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/usr/lib/python3.10/runpy.py", line 146, in _get_module_details
    return _get_module_details(pkg_main_name, error)
  File "/usr/lib/python3.10/runpy.py", line 110, in _get_module_details
    __import__(pkg_name)
  File "/home/petre/api_to_roefact/xl2roefact/xl2roefact/__init__.py", line 5, in <module>
    from xl2roefact.rdinv import rdinv  # status #TODO: wip...
  File "/home/petre/api_to_roefact/xl2roefact/xl2roefact/rdinv.py", line 923
    "cbc_StreetName": suppl_data_read|"PostalAddress"]["StreetName"],
                                                     ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '{' on line 922
